# specfem3d_globe

./: .azure-pipelines.yml  .codecov.yml  .gitattributes  .gitignore  .gitmodules  .travis.yml  3dmodl.h  AUTHORS  CITATION.cff  CMTSOLUTION  CONTRIBUTING.md  COPYRIGHT  INSTALL  KnownBugs  Makefile  Makefile.bgl  Makefile.in  Makefile.rang  Par_file  Par_file.cfg  Par_file.default  Par_file.in  Par_file_240  Par_file_240_20sec_90x90  Par_file_ES_1152_4sec  Par_file_ES_1944procs_243nodes_5sec  Par_file_ES_4056procs_507nodes_3.5sec  Par_file_ES_640_6.75sec  Par_file_ES_regional_2.4s_242nodes_1936procs  Par_file_Japan_Tomo  Par_file_sebastien  Par_file_tsuboi_movie_320  Par_file_vinnik_140x60  PyxMPI.c  PyxMPI.pyx  PyxMeshfem.c  PyxMeshfem.pyx  PyxParameters.c  PyxParameters.pyx  PyxSpecfem.c  (+283 more)
.azure-pipelines/: configure-template.yml  install-template.yml  test-template.yml
.travis/: run_build.sh  run_install.sh  run_tests.sh
DATA/: CMTSOLUTION  CMTSOLUTION_Jeroen_01  CMTSOLUTION_Jeroen_02  CMTSOLUTION_Jeroen_03  CMTSOLUTION_MOVIE_SICHUAN  CMTSOLUTION_SEBASTIEN  CMTSOLUTION_VINNIK  FORCESOLUTION  GF_LOCATIONS  GF_LOCATIONS_BFO  Par_file  Par_file.cfg  Par_file.default  Par_file.in  Par_file.movie  Par_file.syn  Par_file_144_ES  Par_file_160_25sec_90x90  Par_file_1second_Ranger_elastic  Par_file_240_20sec_90x90  Par_file_480_10sec_90x90  Par_file_5seconds_Earth_Simulator_elastic  Par_file_ES_48nodes_NGLL9  Par_file_ES_512_8.5sec  Par_file_ES_640_6.75sec  Par_file_ES_864_5sec  Par_file_ES_regional_4.4s_72nodes_576procs  Par_file_movie_Sichuan  Par_file_ori_v2  Par_file_sebastien  Par_file_tsuboi_movie_320  Par_file_vinnik_140x60  STATIONS  STATIONS_FULL_679_cleaned  STATIONS_JAPAN_REGIONAL  STATIONS_SUBSET_33  STATIONS_VINNIK  Specfem3DGlobe.cfg  detect_duplicates_stations_file.f90  old_STATIONS_all_20June2008_duplicates  (+1 more)
EXAMPLES/: README  README.md  process_DATA_Par_files_to_update_their_parameters_from_a_main_file.py  process_DATA_Par_files_to_update_their_parameters_from_a_master.py  readme  vi_all_Par_files_to_add_parameters_to_them.bash  view_all_Par_files_to_add_parameters_to_them.bash  view_all_parameter_files_to_modify_them.bash  view_all_run_this_example_scripts_to_modify_them.bash  view_all_run_this_example_scripts_to_modify_them.csh
IMPORTANT_BUG_benchmark_Ebru_Par_file/: HOWTO_plot_the_results.txt  Par_file  README_current_conclusions_from_Dimitri_about_the_bug.txt
Montagner_model/: Adrem119  bordille
OUTPUT_FILES/: values_from_mesher.h
PPM/: readme.txt
SCRIPTS_SCHEDULER/: go_mesher_solver_lsf_globe.bash  run_lsf  submit_marenostrum.ll
Specfem3DGlobe/: CGIScript.py  CMTSolution.py  Daemon.py  Driver.py  Launchers.py  MPIDriver.py  Mesher.py  Meshfem.py  Model.py  ParFileCodec.py  PyrePatches.py  Schedulers.py  Script.py  Solver.py  Specfem.py  TopoBathy.py  __init__.py  global.html.tmpl  page1.html.tmpl  regional.html.tmpl  regional2.html.tmpl  regional_c1_1.html.tmpl  regional_c2_1.html.tmpl  regional_c3_1.html.tmpl  xspecfem3D.tmpl
UTILS/: bash_profile_MareNostrum  change_simulation_type.pl  clean_sac_headers_after_crash.sh  cleanbase.pl  collect_seismo.pl  copy_ic_globe_database.pl  copy_m_globe_database.pl  copy_oc_globe_database.pl  create_record_section_Grace.f90  create_specfem3D_gpu_cuda_method_stubs.pl  extract_all_seismos_from_large_file.f90  filter_station_list.f90  generate_station_list_NS.f90  generate_station_list_PKP.f90  generate_station_list_equator.f90  generate_station_list_one_fourth.f90  generate_table_NEX_manual.f90  generate_trace_marenostrum.sh  globe_slice_number.pl  go_mesher_solver_lsf_globe.bash  go_mesher_solver_lsf_globe.kernel  process_data.pl  process_syn.pl  remap_lsf_machines.pl  rotate.pl  run_lsf  run_lsf.bash  run_lsf.kernel  script_IDRIS_MPI.ll  script_marenostrum_parallel.ll  script_marenostrum_parallel_merge_trace.ll  script_marenostrum_parallel_run_with_trace.ll  script_marenostrum_parallel_run_with_trace_mx.ll  script_marenostrum_parallel_run_without_trace_gm.ll  script_marenostrum_parallel_run_without_trace_mx.ll  script_marenostrum_parallel_with_trace.ll  strike_dip_rake_to_CMTSOLUTION.c  test_cache_size.f90  update_headers_change_word_f90.pl
Zhao_JP_model/: m3d1341
crust1.0/: crust1.vp  getCN1xyz.f  readme.txt
crust2.0/: CNelevatio2.txt
doc/: Happy_20th_anniversary_SPECFEM_bon_anniversaire_SPECFEM_email_04apr2015.txt  an_excellent_code_branch_comparison_is_meld.txt  where_to_put_the_adjoint_sources_and_how_to_name_them.txt
global_s362ani/: README  go_mesher_solver_pbs.bash  go_mesher_solver_pbs.kernel.bash  process.kernel.sh  process.sh  run_this_example.sh  state_alpha_kernel.pvsm  state_alpha_kernel2.pvsm  state_beta_kernel.pvsm  state_rho_kernel.pvsm
global_s362ani_small/: go_mesher_pbs.bash  go_solver_pbs.bash  run_this_example.sh
m4/: cit_fc_main.m4  cit_fortran.m4  cit_mpi.m4  cit_path_exchanger.m4  cit_path_pythia.m4  cit_petsc.m4  cit_prog_pyconfig.m4  cit_python.m4  cit_python_eggs.m4  cit_python_incdir.m4  cit_python_site.m4  cit_python_sysconfig.m4
noise_examples/: pre-processing
old/: CMTSOLUTION_DENALI  CMTSOLUTION_SEBASTIEN  STATIONS_JAPAN_REGIONAL  STATIONS_Japan_Tomo  old_STATIONS_all_20June2008_duplicates
regional_Greece_noise_small/: paraviewpython-example.py  process.kernel.sh  run_this_example.sh  state_rho_kernel.pvsm
regional_Greece_small/: README  process.kernel.sh  process.sh  run_mesher_solver.kernel.bash  state_beta_kernel.pvsm  state_vs.pvsm  xcombine_vol_data.sh  xcombine_vol_data.vs.sh
regional_MiddleEast/: README  go_mesher_solver_pbs.bash  process.kernel.sh  process.sh  run_this_example.sh
s362ani/: S2.9EA  S362ANI
s40rts/: README  s40rts.sph
scripts/: go_mesher_solver_lsf_globe.bash  run_lsf_globe_big.bash  script_cines_1536procs.pbs
setup/: config.fh.in  config.h.in  constants.h  constants.h.in  constants_tomography.h  constants_tomography.h.in  constants_topo.h  mpif.h  precision.h  precision.h.in
small_benchmark_run_to_test_more_complex_Earth/: Par_file  Par_file_this_example  create_gnuplot_script_to_compare_seismograms.csh
src/: auto_ner.f90  (+144 more)
(+11621 files in other folders)
